--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ community.path.upload=/Users/mac/Pictures
 spring.mail.host=smtp.qq.com
 spring.mail.port=465
 spring.mail.username=603124891@qq.com
-spring.mail.password=cfxcepafttypbefc
+spring.mail.password=
 spring.mail.properties.mail.smtl.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
